backend/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aegisroute-backend-srv
  namespace: logistics-intelligence
  labels:
    app: aegisroute-backend
    tier: api
spec:
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http-api
  selector:
    app: aegisroute-backend
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: aegisroute-frontend-srv
  namespace: logistics-intelligence
  labels:
    app: aegisroute-frontend
    tier: web
spec:
  ports:
  - port: 8501
    targetPort: 8501
    protocol: TCP
    name: http-web
  selector:
    app: aegisroute-frontend
  type: ClusterIP
